--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ProdOlymp
+server.port=${SERVER_PORT:8080}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=main_user
+spring.datasource.password=Odit5689
+spring.datasource.url=jdbc:postgresql://82.97.241.151:5432/main_user
+spring.jpa.hibernate.ddl-auto=update
