--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.application.name=ProdOlymp
-server.port=${SERVER_PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=main_user
 spring.datasource.password=Odit5689
 spring.datasource.url=jdbc:postgresql://82.97.241.151:5432/main_user
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
+
+server.port=443
+server.ssl.enabled=true
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/prod.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=Odit5689
+# The alias mapped to the certificate
+server.ssl.key-alias=1
