feat: spec swagger, dependency admin panel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=main_user
 spring.datasource.password=Odit5689
 spring.datasource.url=jdbc:postgresql://82.97.241.151:5432/main_user
 spring.jpa.hibernate.ddl-auto=update
-
+spring.boot.admin.client.url=https://82.97.241.151:443
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
