feat: spec update(/auth/sign-in and /me/profile)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ server.ssl.key-store=classpath:keystore/prod.p12
 server.ssl.key-store-password=Odit5689
 # The alias mapped to the certificate
 server.ssl.key-alias=1
-debug=true
+debug=false
