--- a/spec.yaml
+++ b/spec.yaml
@@ -25,6 +25,7 @@ paths:
                   description: Электронная почта пользователя. Должна быть длиной не более 50 символов.
                 password:
                   type: string
+                  format: password
                   description: Пароль пользователя. Должен содержать не менее 6 символов, хотя бы одну заглавную букву, одну строчную букву и одну цифру.
               required:
                 - login
@@ -83,6 +84,7 @@ paths:
                   description: Имя пользователя. Должно содержать только буквы латинского алфавита, цифры и дефисы.
                 password:
                   type: string
+                  format: password
                   description: Пароль пользователя. Должен содержать не менее 6 символов, хотя бы одну заглавную букву, одну строчную букву и одну цифру.
               required:
                 - login
