feat: swagger in /api.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
 
+springdoc.swagger-ui.path=/api.html
 
 server.ssl.enabled=true
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
