feat: snapadmin panel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,17 @@ server.ssl.key-store=classpath:keystore/prod.p12
 server.ssl.key-store-password=Odit5689
 # The alias mapped to the certificate
 server.ssl.key-alias=1
-debug=false
+debug=true
+
+## SnapAdmin is not enabled by default
+snapadmin.enabled=true
+
+## The first-level part of the URL path: http://localhost:8080/${baseUrl}/
+snapadmin.baseUrl=admin
+
+## The package(s) that contain your @Entity classes
+## accepts multiple comma separated values
+snapadmin.modelsPackage=your.models.package,your.second.models.package
+
+spring.jpa.open-in-view=true
+snapadmin.models-package=com.example.prodolymp.models
