--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,6 @@ jobs:
           git pull
           mvn clean package
           screen -X -S prod quit
-          screen -dmS prod java -jar target/ProdOlymp-0.0.1-SNAPSHOT.jar
+          reboot now
           
           
