feat: create service for Task, UnderTheme and controller for Image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ snapadmin.modelsPackage=your.models.package,your.second.models.package
 spring.jpa.open-in-view=true
 snapadmin.models-package=com.example.prodolymp.models
 
-spring.webmvc.cors.allowed-origins=https://dnevnik.fun, http://127.0.0.1:8000 
+spring.webmvc.cors.allowed-origins=http://localhost:3000
 
 # Allowed HTTP methods (comma-separated)
 spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE
