--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,18 @@ spring.datasource.password=Odit5689
 spring.datasource.url=jdbc:postgresql://82.97.241.151:5432/main_user
 spring.jpa.hibernate.ddl-auto=update
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+file.upload-dir=src/main/resources/static/images
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
 
 springdoc.swagger-ui.path=/api.html
 
-server.ssl.enabled=true
+server.ssl.enabled=false
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
@@ -22,7 +27,7 @@ server.ssl.key-store=classpath:keystore/prod.p12
 server.ssl.key-store-password=Odit5689
 # The alias mapped to the certificate
 server.ssl.key-alias=1
-debug=false
+debug=true
 
 ## SnapAdmin is not enabled by default
 snapadmin.enabled=true
