--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ server.ssl.key-store=classpath:keystore/prod.p12
 server.ssl.key-store-password=Odit5689
 # The alias mapped to the certificate
 server.ssl.key-alias=1
-debug=true
+debug=false
 
 ## SnapAdmin is not enabled by default
 snapadmin.enabled=true
