--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=443
+server.port=8081
 spring.application.name=ProdOlymp
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -18,15 +18,6 @@ spring.main.allow-circular-references=true
 
 springdoc.swagger-ui.path=/api.html
 
-server.ssl.enabled=false
-# The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/prod.p12
-# The password used to generate the certificate
-server.ssl.key-store-password=Odit5689
-# The alias mapped to the certificate
-server.ssl.key-alias=1
 debug=false
 
 ## SnapAdmin is not enabled by default
@@ -42,7 +33,7 @@ snapadmin.modelsPackage=your.models.package,your.second.models.package
 spring.jpa.open-in-view=true
 snapadmin.models-package=com.example.prodolymp.models
 
-spring.webmvc.cors.allowed-origins=http://localhost:3000
+#spring.webmvc.cors.allowed-origins=http://localhost:3000
 
 # Allowed HTTP methods (comma-separated)
 spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE
