--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 spring.application.name=ProdOlymp
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=main_user
-spring.datasource.password=Odit5689
-spring.datasource.url=jdbc:postgresql://82.97.241.151:5432/main_user
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://database:5432/postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.enabled=true
